--- a/css/style.css
+++ b/css/style.css
@@ -9,20 +9,199 @@
  }
 
  body{
-    font-family: "saira condesed";
-    font-size: 1.6 rem;
+    font-family: "Saira Condensed", sans-serif; 
+    font-size: 1.6rem;
     line-height: 1.5;
-    background-color: brown;
-    color: 38F527;
-    display: flex;
-    flex-direction: column;
-    min-height: 100 vh;
+    background-color: #f5f5f5 ;
+    color: #333;
+    min-height: 100vh;
  }
 
- .header{
-    background-color: brown;
-    
+   .header {
+    background-color: #5F2A9B;
     display: flex;
     justify-content: space-between;
     align-items: center;
- }
+    
+   }
+
+
+.header__logo{
+    font-size: 3rem;
+    font-weight: bold;
+
+    padding: 1rem;
+    margin-left: 2rem;
+}
+
+  .header__logo a {
+    color: white;
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+     .header nav{
+        padding: 1rem;
+        margin-right: 2rem;
+     }
+
+   .header nav ul {
+    list-style: none;
+
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+
+   }
+
+   .header__nav li{
+    font-size: 3rem;
+    font-weight: bold;
+   }
+   .header__nav a{
+    color: coral;
+    text-decoration: none;
+
+    display: inline-block;
+    padding: 1rem;
+   }
+
+   .footer{
+    background-color: brown;
+
+    padding: 2rem;
+    color:white;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+   }
+
+   .footer nav ul{
+      list-style: none;
+
+      display: flex;
+      justify-content: center;
+      gap: 2rem;
+   }
+
+   main{
+      width: 90%;
+      flex: 1;
+
+      margin: 2rem auto;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+   }
+   main h1{
+      font-size: 4rem;
+      margin: 2rem 0;
+   
+   }
+   .parrafo-home{
+      font-size: 2rem;
+      text-align: center;
+      margin-bottom: 2rem;
+      width: 80%;
+
+   }
+.producto-home{
+   width: 100%;
+}
+   .parrafo-home h2{
+      text-align: center;
+      font-size: 3rem;
+
+      padding: 1rem;
+      margin: 3rem;
+   }
+   .contenedor-tarjetas{
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 2rem;
+   }
+   .tarjeta-producto{
+      background-color: #F52768;
+
+      padding: 0.5rem;
+      border-radius: 1rem;
+      width: 25.5rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 1rem;
+   }
+   .tarjeta-producto img{
+      width: 100%;
+      border-radius: 0.5rem;
+
+   }
+.tarjeta-producto h3{
+   font-size: 2.5rem;
+}
+.tarjeta-producto p{
+   font-size: 2rem;
+   font-weight: bold;
+}
+.form{
+   background-color: #27C5F5;
+
+   padding: 5rem;
+   border-radius: 1rem;
+   width: 45rem;
+   margin: auto;
+   display: flex;
+   flex-direction: column;
+   gap: 2rem;
+}
+.campo-form{
+   display: flex;
+   flex-direction: column;
+   gap: 1rem;
+}
+.campo-form label{
+   font-size: 2rem;
+}
+.campo-form imput,
+.campo-form textarea{
+   padding: 1rem;
+   font-size: 1.6rem;
+   border-radius: 0.5rem;
+   border: none;
+}
+.form button{
+   background-color: #ED537F;
+   color: white;
+   border: none;
+
+   padding: 1rem;
+   font-size: 2rem;
+   font-weight: bold;
+   border-radius: 0.5rem;
+   cursor: pointer;
+}
+@media (ma-width:768px)
+{
+   .header{
+      display: flex;
+      flex-direction: column;
+   }
+}
+.header__logo,
+.header__nav{
+   margin: 0;
+}
+.contenedor-tarjetas{
+   display: flex;
+   flex-direction: column;
+   align-items: center;
+}
+.tarjeta-producto{
+   width: 80%;
+}
+.form{
+   width: 80%;
+   min-width: 400px;
+}
