--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,16 @@
     border-radius: 0.5rem;
     cursor: pointer;
 }
+.mensaje-carrito-vacio{
+    font-size: 2.5rem;
+   text-align: center;
+    margin-top: 2rem;
+}
+   .acciones-carrito{
+    margin-top: 2rem;
+    display: flex;
+    gap: 2rem;
+    
 @media (max-width: 768px) {
     .header{
         display: flex;
